Adiciona referência do Diniz à bibilografia

--- a/document/bibliography.bib
+++ b/document/bibliography.bib
@@ -3,3 +3,9 @@
   author="Alan V. Oppenheim and Ronald W. Schafer and John R. Buck",
   publisher="Prentice Hall"
 }
+
+@book{diniz,
+  title="Digital Signal Processing",
+  author="Paulo S. R. Diniz and Eduardo A. B. da Silva and Sergio L. Netto",
+  publisher="Cambridge University Press"
+}
