Adiciona capítulo de resultados

--- a/document/bibliography.bib
+++ b/document/bibliography.bib
@@ -1,11 +1,48 @@
 @book{oppenheim,
-  title="Discrete-Time Signal Processing",
-  author="Alan V. Oppenheim and Ronald W. Schafer and John R. Buck",
-  publisher="Prentice Hall"
+  title={Discrete-Time Signal Processing},
+  author={Alan V. Oppenheim and Ronald W. Schafer and John R. Buck},
+  publisher={Prentice Hall}
 }
 
 @book{diniz,
-  title="Digital Signal Processing",
-  author="Paulo S. R. Diniz and Eduardo A. B. da Silva and Sergio L. Netto",
-  publisher="Cambridge University Press"
+  title={Digital Signal Processing},
+  author={Paulo S. R. Diniz and Eduardo A. B. da Silva and Sergio L. Netto},
+  publisher={Cambridge University Press}
+}
+
+@article{selesnick,
+  title={Linear-Phase FIR Filter Design by Least Squares},
+  author={Ivan Selesnick},
+  publisher={Benjamin Fite and Adan Galvan andIvan Selesnick},
+  date={2002-08-05}
+}
+
+@periodical{mcclellan_parks,
+  title={A unified approach to the design of optimum FIR linear phase digital filters},
+  author={J. H. McClellan and T. W. Parks},
+  publisher={IEEE},
+  date={1973-11},
+  pages={697-701},
+  volume={20},
+  number={6},
+  doi={10.1109/TCT.1973.1083764}
+}
+
+@online{source_code,
+  title={Repositório do trabalho},
+  url={https://github.com/mateusosmarin/tcc},
+  urldate={2021-05-07}
+}
+
+@book{gang_of_four,
+  title={Design Patterns},
+  subtitle={Elements of Reusable Object-Oriented Software},
+  author={Erich Gamma and John Vlissides and Richard Helm and Ralph Johnson},
+  date={1994-10-21}
+}
+
+@online{pickle,
+  title={Python Object Serialization},
+  url={https://docs.python.org/3/library/pickle.html},
+  urldate={2021-05-07}
 }
